fix:topSectionTitle overflow

--- a/scss/layout/_inner.scss
+++ b/scss/layout/_inner.scss
@@ -17,18 +17,6 @@ l-inner 汎用インナー
   padding-left:  var(--inner-pl);
   padding-right: var(--inner-pr);
   box-sizing: border-box;
-  overflow-x: hidden;
-  @include mq(pc) {
-    margin-inline: auto;
-    max-width: 1024px;
-  }
-}
-
-.l-inner--member {
-  width: 100vw;
-  padding-left:  var(--inner-pl);
-  padding-right: var(--inner-pr);
-  box-sizing: border-box;
   @include mq(pc) {
     margin-inline: auto;
     max-width: 1024px;
