--- a/scss/object/component/_topSectionTitle.scss
+++ b/scss/object/component/_topSectionTitle.scss
@@ -8,7 +8,11 @@
   position: relative;
   display: block;
   width: fit-content;
+  max-width: calc(100vw - var(--inner-pl));
   white-space: nowrap;
+  overflow: hidden;
+  //flex-grow: 1;
+  @include bleed-side(right);
 
   &__upper {
     position: absolute;
@@ -19,6 +23,7 @@
     font-weight: 700;
     line-height: 1;
     width: 100%;
+    max-width: calc(100vw - var(--inner-pl));
     @include mq(tab) {
       font-size: rem(42);
     }
@@ -51,6 +56,8 @@
     line-height: 1;
     display: block;
     width: fit-content;
+    max-width: calc(100vw - var(--inner-pl));
+    overflow: hidden;
     @include mq(tab) {
       font-size: rem(113);
     }
